Rename sections team and clients according to bem

--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -30,13 +30,13 @@
   }
 }
 
-.title {
+.features-title {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-text-color);
 }
 
-.feature-text {
+.features-text {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
