--- a/css/main.css
+++ b/css/main.css
@@ -143,128 +143,10 @@ img {
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.header-section {
-  border-bottom: 1px solid #ececec;
-}
-
-.logo {
-  margin-right: 93px;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-  text-decoration: none;
-}
-
-.logo-web {
-  color: var(--accent-color);
-}
-
-.header-container {
-  display: flex;
-}
-
-.header-list {
-  display: flex;
-}
-
-.header-list .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-contacts .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-link {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header-link:hover, .header-link:focus {
-  color: var(--accent-color);
-}
-
-.header-contacts {
-  display: flex;
-  margin-left: auto;
-}
-
-.current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  opacity: 1;
-}
-
-.contacts-link {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  color: var(--secondary-text-color);
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-envelope,
-.icon-phone {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.contacts-link:hover,
-.contacts-link:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
-}
-
-.header-list .header-link.current {
-  color: var(--accent-color);
-}
-
-.hero {
-  max-width: 1600px;
-  min-height: 600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
-  background: #c4c4c4;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/bcground.jpg");
-  background-repeat: no-repeat;
-  margin-left: auto;
-  margin-right: auto;
-  background-position: center;
-  border: 1px solid #000000;
-}
-
-.hero-title {
-  margin-bottom: 30px;
-  width: 696px;
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+.button-filter:hover, .button-filter:focus {
   color: var(--hero-text-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .backdrop {
@@ -411,6 +293,161 @@ img {
   border: 2px solid var(--accent-color);
 }
 
+.form-container {
+  margin-left: 93px;
+}
+
+.footer-form {
+  display: flex;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  margin-right: 12px;
+  color: var(--hero-text-color);
+  background-color: var(--background-secondary);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-input:focus {
+  border: 1px solid var(--accent-color);
+}
+.footer-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.send-icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  fill: var(--hero-text-color);
+}
+
+.header-section {
+  border-bottom: 1px solid #ececec;
+}
+
+.logo {
+  margin-right: 93px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  text-decoration: none;
+}
+.logo-web {
+  color: var(--accent-color);
+}
+
+.header-container {
+  display: flex;
+}
+
+.header-list {
+  display: flex;
+}
+.header-list .item:not(:last-child) {
+  margin-right: 50px;
+}
+.header-list .header-link.current {
+  color: var(--accent-color);
+}
+
+.header-link {
+  position: relative;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-link:hover, .header-link:focus {
+  color: var(--accent-color);
+}
+
+.header-contacts {
+  display: flex;
+  margin-left: auto;
+}
+.header-contacts .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  opacity: 1;
+}
+
+.contacts-link {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  color: var(--secondary-text-color);
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-link:hover, .contacts-link:focus {
+  color: var(--accent-color);
+  fill: var(--accent-color);
+}
+
+.icon-envelope,
+.icon-phone {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.hero {
+  max-width: 1600px;
+  min-height: 600px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
+  background: #c4c4c4;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/bcground.jpg");
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+  background-position: center;
+  border: 1px solid #000000;
+}
+
+.hero-title {
+  margin-bottom: 30px;
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--hero-text-color);
+}
+
 .container-icon {
   display: inline-flex;
   width: 270px;
@@ -441,13 +478,13 @@ img {
   margin-right: 30px;
 }
 
-.title {
+.features-title {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-text-color);
 }
 
-.feature-text {
+.features-text {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
@@ -500,11 +537,11 @@ img {
   color: var(--hero-text-color);
 }
 
-.team-section {
+.team {
   background-color: #f5f4fa;
 }
 
-.our-team-title {
+.team__title {
   min-width: 264px;
   margin-bottom: 50px;
   font-size: 36px;
@@ -514,21 +551,17 @@ img {
   color: var(--primary-text-color);
 }
 
-.team-list {
+.team__list {
   display: flex;
 }
 
-.team-link:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team-container {
+.team__container {
   padding-top: 30px;
   background-color: var(--background-primary);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-title {
+.team__name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -538,7 +571,7 @@ img {
   color: var(--primary-text-color);
 }
 
-.team-profession {
+.team__profession {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -546,51 +579,15 @@ img {
   color: var(--secondary-text-color);
 }
 
-.team-link {
+.team__link {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
-.social-list {
-  display: flex;
-  padding-left: 32px;
-  padding-right: 32px;
-  justify-content: space-between;
-  align-items: center;
+.team__link:not(:last-child) {
+  margin-right: 30px;
 }
 
-.social-item {
-  width: 44px;
-  height: 44px;
-  margin-top: 16px;
-  margin-bottom: 30px;
-}
-
-.social-link {
-  display: flex;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--background-primary);
-  color: var(--icon-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-icon {
-  display: block;
-  fill: currentColor;
-}
-
-.social-link:hover,
-.social-link:focus {
-  color: var(--hero-text-color);
-  background-color: var(--accent-color);
-}
-
-/* Clients */
-.clients-title {
+.clients__title {
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
@@ -599,13 +596,13 @@ img {
   color: var(--primary-text-color);
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.clients-link {
+.clients__link {
   display: flex;
   width: 170px;
   height: 92px;
@@ -616,54 +613,14 @@ img {
   color: var(--icon-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients-icon {
-  display: block;
-  fill: currentColor;
-}
-
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover, .clients__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.clients-title {
-  margin-bottom: 50px;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-
-.clients-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.clients-link {
-  display: flex;
-  width: 170px;
-  height: 92px;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  color: var(--icon-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-icon {
+.clients__icon {
   display: block;
   fill: currentColor;
-}
-
-.clients-link:hover,
-.clients-link:focus {
-  color: var(--accent-color);
-  border-color: var(--accent-color);
 }
 
 .footer {
@@ -687,6 +644,11 @@ img {
   text-decoration: none;
 }
 
+.address-list {
+  display: block;
+  width: 231px;
+  margin-top: 20px;
+}
 .address-list .footer-link {
   font-style: normal;
   font-size: 14px;
@@ -696,24 +658,15 @@ img {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.address-list {
-  display: block;
-  width: 231px;
-  margin-top: 20px;
+.address-list .footer-link:hover, .address-list .footer-link:focus {
+  color: var(--accent-color);
 }
-
-.address-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
 .address-list .address {
   color: var(--hero-text-color);
 }
 
-.footer-link:hover,
-.footer-link:focus {
-  color: var(--accent-color);
+.address-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .social-container {
@@ -728,14 +681,12 @@ img {
   align-items: center;
 }
 
-.footer-social .social-link {
+.footer-social .social__link {
   background: rgba(255, 255, 255, 0.1);
   color: var(--hero-text-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer-social .social-link:hover,
-.footer-social .social-link:focus {
+.footer-social .social__link:hover, .footer-social .social__link:focus {
   background-color: var(--accent-color);
 }
 
@@ -749,46 +700,6 @@ img {
   color: var(--hero-text-color);
 }
 
-.form-container {
-  margin-left: 93px;
-}
-
-.footer-form {
-  display: flex;
-}
-
-.footer-input {
-  width: 358px;
-  height: 50px;
-  padding-left: 16px;
-  margin-right: 12px;
-  color: var(--hero-text-color);
-  background-color: var(--background-secondary);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-input:focus {
-  border: 1px solid var(--accent-color);
-}
-
-.footer-input::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.send-icon {
-  width: 20px;
-  height: 20px;
-  margin-left: 10px;
-  fill: var(--hero-text-color);
-}
-
 .list-filter {
   display: flex;
   justify-content: center;
@@ -799,13 +710,6 @@ img {
 
 .link-filter:not(:last-child) {
   margin-right: 20px;
-}
-
-.button-filter:hover,
-.button-filter:focus {
-  color: var(--hero-text-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .flex-list {
@@ -859,17 +763,50 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.works-link:hover .overlay-description {
-  transform: translateY(0%);
-}
-
 .works-link {
   display: block;
   color: inherit;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.works-link:hover,
-.works-link:focus {
+.works-link:hover, .works-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.works-link:hover .overlay-description {
+  transform: translateY(0%);
+}
+
+.social {
+  display: flex;
+  padding-left: 32px;
+  padding-right: 32px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.social__item {
+  width: 44px;
+  height: 44px;
+  margin-top: 16px;
+  margin-bottom: 30px;
+}
+
+.social__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-primary);
+  color: var(--icon-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social__link:hover, .social__link:focus {
+  color: var(--hero-text-color);
+  background-color: var(--accent-color);
+}
+
+.social__icon {
+  display: block;
+  fill: currentColor;
 }/*# sourceMappingURL=main.css.map */
