--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,4 +1,4 @@
-.clients-title {
+.clients__title {
   margin-bottom: 50px;
 
   font-size: 36px;
@@ -8,13 +8,13 @@
   color: var(--primary-text-color);
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.clients-link {
+.clients__link {
   display: flex;
   width: 170px;
   height: 92px;
@@ -26,15 +26,15 @@
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    border-color: var(--accent-color);
+  }
 }
 
-.clients-icon {
+.clients__icon {
   display: block;
   fill: currentColor;
-}
-
-.clients-link:hover,
-.clients-link:focus {
-  color: var(--accent-color);
-  border-color: var(--accent-color);
 }
