--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -10,14 +10,6 @@
   margin-right: 20px;
 }
 
-.button-filter:hover,
-.button-filter:focus {
-  color: var(--hero-text-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
 .flex-list {
   display: flex;
   flex-wrap: wrap;
@@ -71,19 +63,19 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.works-link:hover .overlay-description {
-  transform: translateY(0%);
-}
-
 .works-link {
   display: block;
   color: inherit;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.works-link:hover,
-.works-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+
+  &:hover .overlay-description {
+    transform: translateY(0%);
+  }
 }
