--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,8 +1,8 @@
-.team-section {
+.team {
   background-color: #f5f4fa;
 }
 
-.our-team-title {
+.team__title {
   min-width: 264px;
   margin-bottom: 50px;
 
@@ -13,21 +13,17 @@
   color: var(--primary-text-color);
 }
 
-.team-list {
+.team__list {
   display: flex;
 }
 
-.team-link:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team-container {
+.team__container {
   padding-top: 30px;
   background-color: var(--background-primary);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-title {
+.team__name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -37,7 +33,7 @@
   color: var(--primary-text-color);
 }
 
-.team-profession {
+.team__profession {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -45,91 +41,12 @@
   color: var(--secondary-text-color);
 }
 
-.team-link {
+.team__link {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
 
-.social-list {
-  display: flex;
-  padding-left: 32px;
-  padding-right: 32px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.social-item {
-  width: 44px;
-  height: 44px;
-  margin-top: 16px;
-  margin-bottom: 30px;
-}
-
-.social-link {
-  display: flex;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-
-  background-color: var(--background-primary);
-  color: var(--icon-color);
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-icon {
-  display: block;
-  fill: currentColor;
-}
-
-.social-link:hover,
-.social-link:focus {
-  color: var(--hero-text-color);
-  background-color: var(--accent-color);
-}
-
-/* Clients */
-.clients-title {
-  margin-bottom: 50px;
-
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-
-.clients-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.clients-link {
-  display: flex;
-  width: 170px;
-  height: 92px;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  color: var(--icon-color);
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-icon {
-  display: block;
-  fill: currentColor;
-}
-
-.clients-link:hover,
-.clients-link:focus {
-  color: var(--accent-color);
-  border-color: var(--accent-color);
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
