--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,14 @@
 @import './utils/variables';
 @import './utils/common';
 @import './utils/buttons';
+@import './utils/forms';
 
 @import './components/header';
 @import './components/hero';
-@import './components/modal';
 @import './components/features';
 @import './components/about';
 @import './components/team';
 @import './components/clients';
 @import './components/footer';
 @import './components/portfolio';
+@import './components/social';
