--- a/sass/utils/_forms.scss
+++ b/sass/utils/_forms.scss
@@ -159,3 +159,44 @@
   background: var(--accent-color);
   border: 2px solid var(--accent-color);
 }
+
+.form-container {
+  margin-left: 93px;
+}
+
+.footer-form {
+  display: flex;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  margin-right: 12px;
+  color: var(--hero-text-color);
+  background-color: var(--background-secondary);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: none;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus {
+    border: 1px solid var(--accent-color);
+  }
+
+  &::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+}
+
+.send-icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  fill: var(--hero-text-color);
+}
