--- a/css/main.css
+++ b/css/main.css
@@ -77,11 +77,11 @@ img {
   padding: 10px 32px;
   border-radius: 4px;
   border: 1px solid var(--accent-color);
-  font-style: inherit;
-  font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  font-style: inherit;
+  font-weight: 700;
   color: var(--hero-text-color);
   background-color: var(--accent-color);
   cursor: pointer;
@@ -106,6 +106,9 @@ img {
 }
 
 .form-button {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
   width: 200px;
   height: 50px;
   display: flex;
@@ -114,9 +117,6 @@ img {
   margin: auto;
   font-style: inherit;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
   color: var(--hero-text-color);
   background: var(--accent-color);
   border: transparent;
@@ -133,12 +133,12 @@ img {
   padding: 6px 22px;
   border-radius: 4px;
   border: #f5f4fa;
-  font-style: inherit;
-  font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  text-align: center;
   letter-spacing: 0.03em;
+  font-style: inherit;
+  font-weight: 500;
+  text-align: center;
   color: var(--primary-text-color);
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -185,11 +185,11 @@ img {
 }
 
 .form-title {
-  font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
-  text-align: center;
   letter-spacing: 0.03em;
+  font-weight: 700;
+  text-align: center;
   color: #212121;
   margin-bottom: 12px;
 }
@@ -202,10 +202,10 @@ img {
 }
 
 .form-label {
-  margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
+  margin-bottom: 4px;
   color: var(--secondary-text-color);
 }
 
@@ -238,14 +238,15 @@ img {
 }
 
 .user-comments {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
   resize: none;
   width: 448px;
   height: 120px;
   padding-left: 16px;
   padding-top: 12px;
   font-family: inherit;
-  font-size: 12px;
-  letter-spacing: 0.01em;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -263,11 +264,11 @@ img {
   margin-bottom: 30px;
 }
 .accept-label {
-  display: flex;
-  align-items: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  display: flex;
+  align-items: center;
   color: var(--secondary-text-color);
 }
 .accept-link {
@@ -336,12 +337,12 @@ img {
 }
 
 .logo {
-  margin-right: 93px;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-right: 93px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
   color: var(--primary-text-color);
   text-decoration: none;
 }
@@ -368,8 +369,10 @@ img {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
+  font-weight: 500;
   color: var(--primary-text-color);
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -377,16 +380,7 @@ img {
 .header-link:hover, .header-link:focus {
   color: var(--accent-color);
 }
-
-.header-contacts {
-  display: flex;
-  margin-left: auto;
-}
-.header-contacts .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.current::after {
+.header-link.current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -399,11 +393,22 @@ img {
   opacity: 1;
 }
 
+.header-contacts {
+  display: flex;
+  margin-left: auto;
+}
+.header-contacts .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .contacts-link {
   display: flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   font-weight: 500;
   color: var(--secondary-text-color);
   text-decoration: none;
@@ -440,10 +445,10 @@ img {
   width: 696px;
   margin-left: auto;
   margin-right: auto;
-  font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
+  font-weight: 900;
   text-transform: uppercase;
   color: var(--hero-text-color);
 }
@@ -479,12 +484,15 @@ img {
 }
 
 .features-title {
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-text-color);
 }
 
 .features-text {
+  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
@@ -498,12 +506,12 @@ img {
 }
 
 .about-title {
-  min-width: 366px;
-  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.16;
-  text-align: center;
   letter-spacing: 0.03em;
+  min-width: 366px;
+  margin-bottom: 50px;
+  text-align: center;
   color: var(--primary-text-color);
 }
 
@@ -527,12 +535,12 @@ img {
 }
 
 .about-text {
-  font-style: inherit;
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.33;
-  text-align: center;
   letter-spacing: 0.03em;
+  font-style: inherit;
+  font-weight: 700;
+  text-align: center;
   text-transform: uppercase;
   color: var(--hero-text-color);
 }
@@ -546,6 +554,7 @@ img {
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.16;
+  letter-spacing: 0.03em;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
@@ -562,12 +571,12 @@ img {
 }
 
 .team__name {
-  margin-bottom: 10px;
-  font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 10px;
+  font-weight: 500;
+  text-align: center;
   color: var(--primary-text-color);
 }
 
@@ -591,8 +600,8 @@ img {
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
   color: var(--primary-text-color);
 }
 
@@ -635,11 +644,11 @@ img {
 }
 
 .logo-footer {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
   color: var(--hero-text-color);
   text-decoration: none;
 }
@@ -650,10 +659,10 @@ img {
   margin-top: 20px;
 }
 .address-list .footer-link {
-  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  font-style: inherit;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -691,11 +700,11 @@ img {
 }
 
 .social-title {
-  padding-bottom: 20px;
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  padding-bottom: 20px;
+  font-weight: 700;
   text-transform: uppercase;
   color: var(--hero-text-color);
 }
@@ -719,10 +728,10 @@ img {
 }
 
 .portfolio-title {
-  margin-bottom: 4px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
   color: var(--primary-text-color);
 }
 
@@ -754,11 +763,11 @@ img {
   justify-content: center;
   align-items: center;
   padding: 63px 24px;
-  color: var(--hero-text-color);
-  background: rgba(33, 150, 243, 0.9);
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
+  color: var(--hero-text-color);
+  background: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
