--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -7,13 +7,10 @@
 }
 
 .about-title {
+  @include font(36px, 1.16, 0.03em);
   min-width: 366px;
   margin-bottom: 50px;
-
-  font-size: 36px;
-  line-height: 1.16;
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
 
@@ -39,12 +36,10 @@
 }
 
 .about-text {
+  @include font(14px, 1.33, 0.03em);
   font-style: inherit;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.33;
   text-align: center;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--hero-text-color);
 }
