--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -10,11 +10,9 @@
 }
 
 .logo-footer {
-  font-family: 'Raleway', sans-serif;
+  @include font(26px, 1.19, 0.03em);
+  font-family: $secondaryFont;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   color: var(--hero-text-color);
   text-decoration: none;
 }
@@ -25,10 +23,8 @@
   margin-top: 20px;
 
   & .footer-link {
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+    @include font(14px, 1.71, 0.03em);
+    font-style: inherit;
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
 
@@ -74,11 +70,9 @@
 }
 
 .social-title {
+  @include font(14px, 1.14, 0.03em);
   padding-bottom: 20px;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--hero-text-color);
 }
