--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,13 +3,10 @@
 }
 
 .logo {
+  @include font(26px, 1.19, 0.03em);
   margin-right: 93px;
-
-  font-family: 'Raleway', sans-serif;
+  font-family: $secondaryFont;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
   text-decoration: none;
 
@@ -41,8 +38,8 @@
   padding-top: 32px;
   padding-bottom: 32px;
 
+  @include font(14px, 1.14, 0.02em);
   font-weight: 500;
-  letter-spacing: 0.02em;
   color: var(--primary-text-color);
   text-decoration: none;
 
@@ -51,6 +48,21 @@
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+
+  &.current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+
+    opacity: 1;
   }
 }
 
@@ -63,27 +75,13 @@
   }
 }
 
-.current::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-
-  opacity: 1;
-}
-
 .contacts-link {
   display: flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
+  @include font(14px, 1.14, 0.02em);
   font-weight: 500;
   color: var(--secondary-text-color);
   text-decoration: none;
