--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -21,10 +21,8 @@
   margin-left: auto;
   margin-right: auto;
 
+  @include font(44px, 1.36, 0.06em);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--hero-text-color);
 }
