--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -17,18 +17,13 @@
 }
 
 .portfolio-title {
+  @include font(18px, 2, 0.06em);
   margin-bottom: 4px;
-
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
   color: var(--primary-text-color);
 }
 
 .portfolio-text {
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
+  @include font(16px, 1.88, 0.03em);
 }
 
 .flex-element {
@@ -53,11 +48,9 @@
   align-items: center;
   padding: 63px 24px;
 
+  @include font(18px, 1.56, 0.03em);
   color: var(--hero-text-color);
   background: rgba(33, 150, 243, 0.9);
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
 
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
