--- a/sass/utils/_buttons.scss
+++ b/sass/utils/_buttons.scss
@@ -4,11 +4,9 @@
   border-radius: 4px;
   border: 1px solid var(--accent-color);
 
+  @include font(16px, 1.88, 0.06em);
   font-style: inherit;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
   color: var(--hero-text-color);
   background-color: var(--accent-color);
   cursor: pointer;
@@ -37,6 +35,7 @@
 }
 
 .form-button {
+  @include font(16px, 1.88, 0.06em);
   width: 200px;
   height: 50px;
   display: flex;
@@ -45,9 +44,6 @@
   margin: auto;
   font-style: inherit;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
   color: var(--hero-text-color);
   background: var(--accent-color);
   border: transparent;
@@ -68,12 +64,10 @@
   border-radius: 4px;
   border: #f5f4fa;
 
+  @include font(16px, 1.62, 0.03em);
   font-style: inherit;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
   cursor: pointer;
 
