--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,3 +7,12 @@
   --background-primary: #ffffff;
   --background-secondary: #2f303a;
 }
+
+$primaryFont: 'Roboto', sans-serif;
+$secondaryFont: 'Raleway', sans-serif;
+
+@mixin font($fs, $lh, $ls) {
+  font-size: $fs;
+  line-height: $lh;
+  letter-spacing: $ls;
+}
