--- a/css/main.css
+++ b/css/main.css
@@ -662,7 +662,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  font-style: inherit;
+  font-style: normal;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
