--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -24,7 +24,7 @@
 
   & .footer-link {
     @include font(14px, 1.71, 0.03em);
-    font-style: inherit;
+    font-style: normal;
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
 
